@@ -2,6 +2,7 @@ Changelog for mk-table-sync:
 
 2008-10-17: version 1.0.10
 
+   * --tables was not honored when using --replicate (issue 79).
    * Updated documentation (issue 85).
    * --replicate failed cryptically on truncated boundaries column (issue 81).
 
